fix: поправил расхождение инонки "бургер" меню с макетом и gap между пунктами меню первого уровня

--- a/blocks/header/__menu-button/_type/header__menu-button_type_burger.css
+++ b/blocks/header/__menu-button/_type/header__menu-button_type_burger.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: none;
-  height: 20px;
+  height: 23px;
   width: 25px;
 }
 
