--- a/blocks/header/__menu-button/header__menu-button.css
+++ b/blocks/header/__menu-button/header__menu-button.css
@@ -6,7 +6,7 @@
   flex-direction: row;
   gap: 12px;
   justify-content: center;
-  margin-right: -95px;
+  margin-right: -100px;
   padding: 0;
 }
 
