--- a/blocks/header/__small-menu/header__small-menu.css
+++ b/blocks/header/__small-menu/header__small-menu.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 45px;
+  gap: 35px;
   justify-content: space-between;
   list-style: none;
   margin: 0;
